--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-select": "^5.7.0",
     "sass": "^1.58.3",
     "styled-components": "^5.3.8",
+    "sweetalert2": "^11.7.3",
     "swiper": "^9.1.0"
   }
 }
