--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "react-dom": "18.2.0",
     "react-router-dom": "^6.9.0",
     "react-select": "^5.7.0",
+    "react-tabs": "^6.0.1",
     "sass": "^1.58.3",
     "styled-components": "^5.3.8",
-    "swiper": "^9.1.0"
+    "swiper": "^9.2.4"
   }
 }
