--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react-dom": "18.2.0",
     "react-router-dom": "^6.9.0",
     "react-select": "^5.7.0",
+    "react-slick": "^0.29.0",
     "react-tabs": "^6.0.1",
     "sass": "^1.58.3",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.8",
     "sweetalert2": "^11.7.3",
     "swiper": "^9.2.4"
